--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <title>Angola Telecom</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- My style -->
+  <link rel="stylesheet" href="assets/css/demo.css" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css" />
+
+
 
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet" />
   <link rel="stylesheet" href="assets/fonts/icomoon/style.css" />
@@ -24,13 +33,7 @@
 
   <link rel="stylesheet" href="assets/css/style.css" />
 
-  <!-- My style -->
-  <link rel="stylesheet" href="assets/css/demo.css" />
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" />
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css" />
+
   <!-- <link rel="icon" type="image/png" href="assets/img/logo/logo.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/img/logo/logo.png" sizes="16x16"> -->
   <!-- End My Style -->
@@ -54,10 +57,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p class="mb-0 negrito">
-              <span class="mr-3"><a href="#" class="text-white"> Customer Sign in</a>
-              </span>
-              <span><a href="#" class="text-white">Call Now 666-888-000</a>
+            <p class="mb-0">
+              <span><a href="#" class="text-white">Ligue já - 666-888-000</a>
               </span>
             </p>
           </div>
@@ -182,7 +183,7 @@
     <div class="section-cards mt-4 mb-4 pb-4">
       <div class="container">
         <div class="row mb-4">
-          <div class="col-lg-4 mt-4 text-center">
+          <div class="col-lg-4 mt-4 text-center ">
             <div class="col-lg-12 p-4 card-mk shadow-sm bg-white">
               <div class="bg-primario mb-4 circle">
                 <img src="assets/img/svg/wi-fi.svg" class="mt-3" />
@@ -256,50 +257,33 @@
           <div class="col-lg-12">
             <h3 class="text-uppercase negrito">Nossos Produtos</h3>
           </div>
-          <div class="col-lg-4 mt-4">
-            <div class="col-lg-12 produtos p-4 card-mk" style="
-                  background-image: -webkit-gradient(
-                      linear,
-                      right top,
-                      left bottom,
-                      from(#00000071),
-                      to(#00000071)
-                    ),
-                    url(assets/img/produtos/p1.jpg);
-                ">
-              <span class="text-uppercase btn border-0 text-white bg-gradiente-1 roudend-0">Fale e
-                Navegue</span>
-            </div>
+
+          <div class="col-md-6 col-lg-4 mt-4 ">
+            <a href="assets/img/produtos/p1.jpg" class="media-1 card-mk" data-fancybox="gallery">
+              <img src="assets/img/produtos/p1.jpg" alt="Image" class="img-fluid">
+              <div class="media-1-content">
+                <span class="text-uppercase m-auto btn border-0 text-white bg-gradiente-1 roudend-0">Fale e
+                  Navegue</span>
+              </div>
+            </a>
           </div>
-          <div class="col-lg-4 mt-4">
-            <div class="col-lg-12 produtos p-4 card-mk" style="
-                  background-image: -webkit-gradient(
-                      linear,
-                      right top,
-                      left bottom,
-                      from(#00000071),
-                      to(#00000071)
-                    ),
-                    url(assets/img/produtos/p2.jpg);
-                  background-size: 100% 100%;
-                  background-repeat: no-repeat;
-                ">
-              <span class="text-uppercase btn border-0 text-white bg-gradiente-1 roudend-0">Fale Mais</span>
-            </div>
+
+          <div class="col-md-6 col-lg-4 mt-4">
+            <a href="assets/img/produtos/p2.jpg" class="media-1 card-mk" data-fancybox="gallery">
+              <img src="assets/img/produtos/p2.jpg" alt="Image" class="img-fluid">
+              <div class="media-1-content">
+                <span class="text-uppercase m-auto btn border-0 text-white bg-gradiente-1 roudend-0">Fale Mais</span>
+              </div>
+            </a>
           </div>
-          <div class="col-lg-4 mt-4">
-            <div class="col-lg-12 produtos p-4 card-mk" style="
-                  background-image: -webkit-gradient(
-                      linear,
-                      right top,
-                      left bottom,
-                      from(#00000071),
-                      to(#00000071)
-                    ),
-                    url(assets/img/produtos/p3.jpg);
-                ">
-              <span class="text-uppercase btn border-0 text-white bg-gradiente-1 roudend-0">Fale Mais</span>
-            </div>
+
+          <div class="col-md-6 col-lg-4 mt-4">
+            <a href="assets/img/produtos/p3.jpg" class="media-1 card-mk" data-fancybox="gallery">
+              <img src="assets/img/produtos/p3.jpg" alt="Image" class="img-fluid">
+              <div class="media-1-content">
+                <span class="text-uppercase btn border-0 m-auto text-white bg-gradiente-1 roudend-0">Fale Mais</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
@@ -311,11 +295,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <!-- Ver uma forma de adicionar imagens -->
-            <div class="mt-4 pb-4 pt-4 text-center text-uppercase bg-white"
-              style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+            <!-- Slider de Publicidades -->
+            <div class="slide-one-item home-slider owl-carousel">
+              <div class="testimonial bg-white"
+                style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+              </div>
+              <div class="testimonial bg-white"
+                style="background-image: url(assets/img/banner/banner-mk.png); background-size: cover;height: 250px;">
+              </div>
             </div>
-            <!-- Ver uma forma de adicionar imagens -->
+            <!-- End Slider de Publicidades -->
           </div>
         </div>
       </div>
@@ -333,7 +322,7 @@
 
         <div class="row mb-4">
           <div class="col-lg-4 mt-4">
-            <div class="col-lg-12 card bg-white border-0 shadow card-mk">
+            <div class="col-lg-12 bg-white shadow card-mk">
               <img src="assets/img/noticias/Adriano.jpg" alt="" />
               <div class="p-4 mt-2">
                 <h5 class="negrito">Fale e Navegue no Bailundo</h5>
@@ -349,7 +338,7 @@
             </div>
           </div>
           <div class="col-lg-4 mt-4">
-            <div class="col-lg-12 card bg-white border-0 shadow card-mk">
+            <div class="col-lg-12 bg-white shadow card-mk">
               <img src="assets/img/noticias/Euclides.jpg" alt="" />
               <div class="p-4 mt-2">
                 <h5 class="negrito">
@@ -366,7 +355,7 @@
             </div>
           </div>
           <div class="col-lg-4 mt-4">
-            <div class="col-lg-12 card bg-white border-0 shadow card-mk">
+            <div class="col-lg-12 bg-white shadow card-mk">
               <img src="assets/img/noticias/huila.jpg" alt="" />
               <div class="p-4 mt-2">
                 <h5 class="negrito">
@@ -511,11 +500,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <!-- Ver uma mecanismo de adicionar fotos para publicidades -->
-            <div class="mt-4 pb-4 pt-4 text-center text-uppercase bg-white"
-              style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+            <!-- Slider de Publicidades -->
+            <div class="slide-one-item home-slider owl-carousel">
+              <div class="testimonial bg-white"
+                style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+              </div>
+              <div class="testimonial bg-white"
+                style="background-image: url(assets/img/banner/banner-mk.png); background-size: cover;height: 250px;">
+              </div>
             </div>
-            <!-- Ver uma mecanismo de adicionar fotos para publicidades -->
+            <!-- End Slider de Publicidades -->
           </div>
         </div>
       </div>
