--- a/pages/lojas.html
+++ b/pages/lojas.html
@@ -5,11 +5,20 @@
   <title>Angola Telecom</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- My style -->
+  <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../assets/css/demo.css" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <!-- <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="32x32">
+ <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="16x16"> -->
+  <!-- End My Style -->
+
 
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet" />
   <link rel="stylesheet" href="../assets/fonts/icomoon/style.css" />
 
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+
   <link rel="stylesheet" href="../assets/css/jquery-ui.css" />
   <link rel="stylesheet" href="../assets/css/owl.carousel.min.css" />
   <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css" />
@@ -25,13 +34,6 @@
 
   <link rel="stylesheet" href="../assets/css/style.css" />
 
-  <!-- My style -->
-  <link rel="stylesheet" href="../assets/css/demo.css" />
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <!-- <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="16x16"> -->
-  <!-- End My Style -->
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -52,10 +54,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p class="mb-0 negrito">
-              <span class="mr-3"><a href="#" class="text-white"> Customer Sign in</a>
-              </span>
-              <span><a href="#" class="text-white">Call Now 666-888-000</a>
+            <p class="mb-0 ">
+              <span><a href="#" class="text-white">Ligue já - 666-888-000</a>
               </span>
             </p>
           </div>
@@ -134,10 +134,19 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="banner mb-3"
-              style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover; height: 150px;">
+            <!-- Slider de Publicidades -->
+            <div class="slide-one-item home-slider owl-carousel">
+              <div class="testimonial bg-white"
+                style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover;height: 220px;">
+              </div>
+              <div class="testimonial bg-white"
+                style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 220px;">
+              </div>
             </div>
+            <!-- End Slider de Publicidades -->
           </div>
+
+
           <div class="col-lg-12 mt-4">
             <h3 class="text-center text-uppercase negrito">Encontre a loja mais próxima</h3>
           </div>
@@ -200,7 +209,7 @@
                     </div>
 
                     <div class="mt-3 text-center">
-                      <button class="btn bg-primario  text-white m-auto text-center rounded-0" data-toggle="modal"
+                      <button class="btn bg-primario  text-white m-auto text-center roudend-0" data-toggle="modal"
                         data-target=".contactar">Contactar Loja
                         <i class="fas fa-arrow-right text-white"></i></button>
                     </div>
@@ -230,7 +239,7 @@
                     </div>
 
                     <div class="mt-3 text-center">
-                      <button class="btn bg-primario  text-white m-auto text-center rounded-0" data-toggle="modal"
+                      <button class="btn bg-primario  text-white m-auto text-center roudend-0" data-toggle="modal"
                         data-target=".contactar">Contactar Loja
                         <i class="fas fa-arrow-right text-white"></i></button>
                     </div>
@@ -260,7 +269,7 @@
                     </div>
 
                     <div class="mt-3 text-center">
-                      <button class="btn bg-primario  text-white m-auto text-center rounded-0" data-toggle="modal"
+                      <button class="btn bg-primario  text-white m-auto text-center roudend-0" data-toggle="modal"
                         data-target=".contactar">Contactar Loja
                         <i class="fas fa-arrow-right text-white"></i></button>
                     </div>
@@ -290,7 +299,7 @@
                     </div>
 
                     <div class="mt-3 text-center">
-                      <button class="btn bg-primario  text-white m-auto text-center rounded-0" data-toggle="modal"
+                      <button class="btn bg-primario  text-white m-auto text-center roudend-0" data-toggle="modal"
                         data-target=".contactar">Contactar Loja
                         <i class="fas fa-arrow-right text-white"></i></button>
                     </div>
@@ -320,7 +329,7 @@
                     </div>
 
                     <div class="mt-3 text-center">
-                      <button class="btn bg-primario  text-white m-auto text-center rounded-0" data-toggle="modal"
+                      <button class="btn bg-primario  text-white m-auto text-center roudend-0" data-toggle="modal"
                         data-target=".contactar">Contactar Loja
                         <i class="fas fa-arrow-right text-white"></i></button>
                     </div>
@@ -350,7 +359,7 @@
                     </div>
 
                     <div class="mt-3 text-center">
-                      <button class="btn bg-primario  text-white m-auto text-center rounded-0" data-toggle="modal"
+                      <button class="btn bg-primario  text-white m-auto text-center " data-toggle="modal"
                         data-target=".contactar">Contactar Loja
                         <i class="fas fa-arrow-right text-white"></i></button>
                     </div>
