--- a/pages/recrutamento.html
+++ b/pages/recrutamento.html
@@ -5,11 +5,20 @@
   <title>Angola Telecom</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- My style -->
+  <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../assets/css/demo.css" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <!-- <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="16x16"> -->
+  <!-- End My Style -->
+
 
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet" />
   <link rel="stylesheet" href="../assets/fonts/icomoon/style.css" />
 
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+
   <link rel="stylesheet" href="../assets/css/jquery-ui.css" />
   <link rel="stylesheet" href="../assets/css/owl.carousel.min.css" />
   <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css" />
@@ -25,13 +34,6 @@
 
   <link rel="stylesheet" href="../assets/css/style.css" />
 
-  <!-- My style -->
-  <link rel="stylesheet" href="../assets/css/demo.css" />
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <!-- <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="16x16"> -->
-  <!-- End My Style -->
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -52,10 +54,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p class="mb-0 negrito">
-              <span class="mr-3"><a href="#" class="text-white"> Customer Sign in</a>
-              </span>
-              <span><a href="#" class="text-white">Call Now 666-888-000</a>
+            <p class="mb-0 ">
+              <span><a href="#" class="text-white">Ligue já - 666-888-000</a>
               </span>
             </p>
           </div>
