--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -5,6 +5,14 @@
     <title>Angola Telecom</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- My style -->
+    <link rel="stylesheet" href="../assets/css/demo.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <!-- <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="32x32">
+<link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="16x16"> -->
+    <!-- End My Style -->
+
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet" />
     <link rel="stylesheet" href="../assets/fonts/icomoon/style.css" />
@@ -25,29 +33,7 @@
 
     <link rel="stylesheet" href="../assets/css/style.css" />
 
-    <!-- My style -->
-    <link rel="stylesheet" href="../assets/css/demo.css" />
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <!-- <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="../assets/img/logo/logo.png" sizes="16x16"> -->
-    <!-- End My Style -->
 
-
-    <style>
-        .servicos .nav-link {
-            color: #000;
-        }
-
-        .nav-link.active {
-            color: white !important;
-            background: -webkit-gradient(linear,
-                    right top,
-                    left bottom,
-                    from(#32dbc7),
-                    to(#0960aa)) !important;
-        }
-    </style>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -68,10 +54,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <p class="mb-0 negrito">
-                            <span class="mr-3"><a href="#" class="text-white"> Customer Sign in</a>
-                            </span>
-                            <span><a href="#" class="text-white">Call Now 666-888-000</a>
+                        <p class="mb-0 ">
+                            <span><a href="#" class="text-white">Ligue já - 666-888-000</a>
                             </span>
                         </p>
                     </div>
@@ -355,10 +339,17 @@
         <div class="servicos-publicidade mb-4 pb-4">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="mt-4 pb-4 pt-4 text-center text-uppercase bg-white"
-                            style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 250px;">
+                    <div class="col-lg-12 mt-4">
+                        <!-- Slider de Publicidades -->
+                        <div class="slide-one-item home-slider owl-carousel">
+                            <div class="testimonial bg-white"
+                                style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+                            </div>
+                            <div class="testimonial bg-white"
+                                style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 250px;">
+                            </div>
                         </div>
+                        <!-- End Slider de Publicidades -->
                     </div>
                 </div>
             </div>
