Trabalhando nas alterações 02/08/2020

--- a/index.html
+++ b/index.html
@@ -162,20 +162,6 @@
           </div>
         </div>
       </div>
-      <div>
-        <div class="testimonial slider-photo-3">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <!-- <div class="content-text-slider text-right">
-                  <h1>Angola Telecom</h1>
-                  <h3>Angola Telecom</h3>
-                </div> -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
     <!-- End Carrousel -->
 
@@ -298,10 +284,13 @@
             <!-- Slider de Publicidades -->
             <div class="slide-one-item home-slider owl-carousel">
               <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+                style="background-image: url(assets/img/banner/covid-1.jpg); background-size: cover;height: 329px;">
               </div>
               <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/banner-mk.png); background-size: cover;height: 250px;">
+                style="background-image: url(assets/img/banner/covid-2.jpg); background-size: cover;height: 329px;">
+              </div>
+              <div class="testimonial bg-white"
+                style="background-image: url(assets/img/banner/covid-3.jpg); background-size: cover;height: 329px;">
               </div>
             </div>
             <!-- End Slider de Publicidades -->
@@ -396,7 +385,7 @@
                       <div class="col-lg-12 border p-4 text-center">
                         <img src="assets/img/svg/equi-1.svg" alt="" class="col-lg-12 mb-2" /><br />
                         <span class="negrito">18.000 KZ <sup><s>21.000kz</s></sup></span>
-                        <h6 class="btn btn-primary bg-gradiente-1 text-white roudend-0 mt-2">
+                        <h6 class="btn btn-primary bg-gradiente-1 text-white roudend-0 mt-2 col-lg-12">
                           Internet
                         </h6>
                       </div>
@@ -405,7 +394,7 @@
                       <div class="col-lg-12 text-center border p-4">
                         <img src="assets/img/svg/equi-2.svg" alt="" class="col-lg-12 mb-2" /><br />
                         <span class="negrito">18.000 KZ <sup><s>21.000kz</s></sup></span>
-                        <h6 class="btn btn-primary bg-gradiente-1 text-white roudend-0 mt-2">
+                        <h6 class="btn btn-primary bg-gradiente-1 text-white roudend-0 mt-2 col-lg-12">
                           Telefone Fixo Móvel
                         </h6>
                       </div>
@@ -503,10 +492,13 @@
             <!-- Slider de Publicidades -->
             <div class="slide-one-item home-slider owl-carousel">
               <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+                style="background-image: url(assets/img/banner/covid-1.jpg); background-size: cover;height: 329px;">
               </div>
               <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/banner-mk.png); background-size: cover;height: 250px;">
+                style="background-image: url(assets/img/banner/covid-2.jpg); background-size: cover;height: 329px;">
+              </div>
+              <div class="testimonial bg-white"
+                style="background-image: url(assets/img/banner/covid-3.jpg); background-size: cover;height: 329px;">
               </div>
             </div>
             <!-- End Slider de Publicidades -->
