--- a/pages/lojas.html
+++ b/pages/lojas.html
@@ -137,10 +137,13 @@
             <!-- Slider de Publicidades -->
             <div class="slide-one-item home-slider owl-carousel">
               <div class="testimonial bg-white"
-                style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover;height: 220px;">
+                style="background-image: url(../assets/img/banner/covid-1.jpg); background-size: cover;height: 290px;">
               </div>
               <div class="testimonial bg-white"
-                style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 220px;">
+                style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover;height: 290px;">
+              </div>
+              <div class="testimonial bg-white"
+                style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 290px;">
               </div>
             </div>
             <!-- End Slider de Publicidades -->
