--- a/pages/telinforma.html
+++ b/pages/telinforma.html
@@ -186,6 +186,9 @@
               <!-- Slider de Publicidades -->
               <div class="slide-one-item home-slider owl-carousel">
                 <div class="testimonial bg-white"
+                  style="background-image: url(../assets/img/banner/covid-1.jpg); background-size: cover;height: 190px;">
+                </div>
+                <div class="testimonial bg-white"
                   style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover;height: 190px;">
                 </div>
                 <div class="testimonial bg-white"
