Melhorando a parte do manual de plano

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -154,11 +154,16 @@
             </div>
 
             <div class="p-4">
-              <a href="#" class="text-dark" target="_blank">
-                <div class="text-center pt-4 pb-4 manual_angola_telecom">
-                  <p class="mt-3 negrito text-uppercase">Plano de Negócio</p>
-                </div>
-              </a>
+              <object data="../assets/pdf/plano.pdf" type="application/x-pdf" title="Manual de Plano de Negócio"
+                width="500" height="720">
+                <a href="../assets/pdf/plano.pdf" class="text-dark">
+                  <div class="text-center pt-4 pb-4 manual_angola_telecom">
+                    <p class="mt-3 negrito text-uppercase">
+                      Plano de Negócio
+                    </p>
+                  </div>
+                </a>
+              </object>
             </div>
           </div>
           <!-- End Lateral Esquerto informações relacionados com a Angola Telecom -->
