--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -156,7 +156,7 @@
             <div class="p-4">
               <object data="../assets/pdf/plano.pdf" type="application/x-pdf" title="Manual de Plano de Negócio"
                 width="500" height="720">
-                <a href="../assets/pdf/plano.pdf" class="text-dark">
+                <a href="../assets/pdf/plano.pdf" class="text-dark" target="_blank">
                   <div class="text-center pt-4 pb-4 manual_angola_telecom">
                     <p class="mt-3 negrito text-uppercase">
                       Plano de Negócio
